feat: bump version to 2.10.0 and enhance JSON/XML handling
- Updated version in package.json and manifest.json to 2.10.0.
- Added support for Google JSON protection prefix and chunked responses in rule validation.
- Implemented XML validation in rule editor and response handling.
- Enhanced content type detection based on response body.
- Improved script injection logic for existing tabs during initialization.
- Added user feedback for page reloads when starting recording.
- Updated localization files for new content types and messages.
- Refactored storage log flushing to improve performance and reliability.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,7 +128,9 @@
     "delayPlaceholder": "E.g., 0, 1000, 3000",
     "contentType": "Content Type",
     "json": "JSON",
-    "text": "Text",
+    "xml": "XML",
+    "html": "HTML",
+    "text": "Plain Text",
     "responseBody": "Response Body",
     "responseBodyPlaceholder": "Enter response data (JSON or text)",
     "beautify": "Beautify",
@@ -176,6 +178,9 @@
     "title": "Open DevTools",
     "message": "Press <strong>{{shortcut}}</strong> to open DevTools and access Moq panel",
     "gotIt": "Got it"
+  },
+  "recording": {
+    "pageReloaded": "Page reloaded to activate request interceptor"
   },
   "common": {
     "ok": "OK",
