Refactor RuleEditor and RuleResponseSection components to remove XML handling; enhance response hook validation with security checks; normalize content type detection; improve regex validation; update translations for validation errors; implement error boundaries in popup; streamline message action types; adjust TypeScript configuration for better type support.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,8 +128,6 @@
     "delayPlaceholder": "E.g., 0, 1000, 3000",
     "contentType": "Content Type",
     "json": "JSON",
-    "xml": "XML",
-    "html": "HTML",
     "text": "Plain Text",
     "responseBody": "Response Body",
     "responseBodyPlaceholder": "Enter response data (JSON or text)",
@@ -148,6 +146,8 @@
     "responseHookEnabled": "Enabled",
     "responseHookDisabled": "Disabled",
     "responseHookDescription": "JavaScript code to dynamically modify the response before returning it",
+    "securityWarning": "Security Warning",
+    "securityWarningMessage": "Response hooks execute JavaScript code. Only use trusted code. Never import rules from untrusted sources.",
     "responseHookPlaceholder": "// Modify response before returning\n// Available: response, request, helpers\n\n// Example: Add timestamp\nresponse.timestamp = helpers.timestamp();\n\n// Example: Generate unique ID\nresponse.id = helpers.uuid();",
     "responseMode": "Response Mode",
     "responseModeModify": "Modify Mock Response",
@@ -163,7 +163,33 @@
     "responseHookHelperUuid": "uuid() - Generate UUID v4",
     "responseHookHelperTimestamp": "timestamp() - Current timestamp",
     "responseHookHelperRandomNumber": "randomNumber(min, max) - Random number",
-    "responseHookHelperRandomString": "randomString(length) - Random string"
+    "responseHookHelperRandomString": "randomString(length) - Random string",
+    "validationErrors": {
+      "evalNotAllowed": "eval() is not allowed",
+      "importNotAllowed": "import statements are not allowed",
+      "requireNotAllowed": "require() is not allowed",
+      "processNotAllowed": "process object is not allowed",
+      "windowNotAllowed": "window object is not allowed",
+      "documentNotAllowed": "document object is not allowed",
+      "locationNotAllowed": "location object is not allowed",
+      "cookieNotAllowed": "cookie access is not allowed",
+      "storageNotAllowed": "Storage access is not allowed",
+      "dynamicThisNotAllowed": "Dynamic property access on \"this\" is not allowed",
+      "fetchNotAllowed": "fetch() is not allowed",
+      "xhrNotAllowed": "XMLHttpRequest is not allowed",
+      "imageNotAllowed": "Image constructor is not allowed",
+      "srcNotAllowed": "Setting src property is not allowed",
+      "innerHTMLNotAllowed": "innerHTML is not allowed",
+      "outerHTMLNotAllowed": "outerHTML is not allowed",
+      "functionNotAllowed": "Function constructor is not allowed",
+      "globalThisNotAllowed": "globalThis access is not allowed",
+      "dynamicSelfNotAllowed": "Dynamic self property access is not allowed",
+      "prototypePollutionNotAllowed": "Prototype pollution attempts are not allowed",
+      "syntaxError": "Syntax error: {{message}}",
+      "invalidJavaScript": "Invalid JavaScript code",
+      "validationUnavailable": "Validation unavailable",
+      "undefinedVariable": "'{{name}}' is not defined. Available: response, request, helpers"
+    }
   },
   "settings": {
     "settings": "Settings",
