--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -128,8 +128,6 @@
     "delayPlaceholder": "Например, 0, 1000, 3000",
     "contentType": "Тип контента",
     "json": "JSON",
-    "xml": "XML",
-    "html": "HTML",
     "text": "Простой текст",
     "responseBody": "Тело ответа",
     "responseBodyPlaceholder": "Введите данные ответа (JSON или текст)",
@@ -148,6 +146,8 @@
     "responseHookEnabled": "Включен",
     "responseHookDisabled": "Выключен",
     "responseHookDescription": "JavaScript код для динамического изменения ответа перед возвратом",
+    "securityWarning": "Предупреждение безопасности",
+    "securityWarningMessage": "Хуки ответа выполняют JavaScript код. Используйте только проверенный код. Никогда не импортируйте правила из ненадежных источников.",
     "responseHookPlaceholder": "// Изменить ответ перед возвратом\n// Доступно: response, request, helpers\n\n// Пример: Добавить временную метку\nresponse.timestamp = helpers.timestamp();\n\n// Пример: Сгенерировать уникальный ID\nresponse.id = helpers.uuid();",
     "responseMode": "Режим ответа",
     "responseModeModify": "Изменить мок-ответ",
@@ -163,7 +163,33 @@
     "responseHookHelperUuid": "uuid() - Сгенерировать UUID v4",
     "responseHookHelperTimestamp": "timestamp() - Текущая временная метка",
     "responseHookHelperRandomNumber": "randomNumber(min, max) - Случайное число",
-    "responseHookHelperRandomString": "randomString(length) - Случайная строка"
+    "responseHookHelperRandomString": "randomString(length) - Случайная строка",
+    "validationErrors": {
+      "evalNotAllowed": "eval() не разрешен",
+      "importNotAllowed": "import инструкции не разрешены",
+      "requireNotAllowed": "require() не разрешен",
+      "processNotAllowed": "объект process не разрешен",
+      "windowNotAllowed": "объект window не разрешен",
+      "documentNotAllowed": "объект document не разрешен",
+      "locationNotAllowed": "объект location не разрешен",
+      "cookieNotAllowed": "доступ к cookie не разрешен",
+      "storageNotAllowed": "доступ к Storage не разрешен",
+      "dynamicThisNotAllowed": "динамический доступ к свойствам \"this\" не разрешен",
+      "fetchNotAllowed": "fetch() не разрешен",
+      "xhrNotAllowed": "XMLHttpRequest не разрешен",
+      "imageNotAllowed": "конструктор Image не разрешен",
+      "srcNotAllowed": "установка свойства src не разрешена",
+      "innerHTMLNotAllowed": "innerHTML не разрешен",
+      "outerHTMLNotAllowed": "outerHTML не разрешен",
+      "functionNotAllowed": "конструктор Function не разрешен",
+      "globalThisNotAllowed": "доступ к globalThis не разрешен",
+      "dynamicSelfNotAllowed": "динамический доступ к свойствам self не разрешен",
+      "prototypePollutionNotAllowed": "попытки загрязнения прототипа не разрешены",
+      "syntaxError": "Синтаксическая ошибка: {{message}}",
+      "invalidJavaScript": "Некорректный JavaScript код",
+      "validationUnavailable": "Валидация недоступна",
+      "undefinedVariable": "'{{name}}' не определена. Доступны: response, request, helpers"
+    }
   },
   "settings": {
     "settings": "Настройки",
