feat: enhance recording state management; clear logRequests on tab closure and service worker suspend; add security warnings for rule imports

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -75,7 +75,9 @@
     "willRemove": "Rules to remove",
     "willAdd": "Rules to add",
     "confirmMerge": "Merge Rules",
-    "confirmReplace": "Replace All Rules"
+    "confirmReplace": "Replace All Rules",
+    "securityWarning": "Security Warning",
+    "securityMessage": "These rules contain executable code (Response Hooks). Only import if you trust the source."
   },
   "warnings": {
     "overlappingRules": "Overlaps with {{count}} other rule{{count, plural, one {} other {s}}}",
