--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -75,7 +75,9 @@
     "willRemove": "Правил к удалению",
     "willAdd": "Правил к добавлению",
     "confirmMerge": "Объединить правила",
-    "confirmReplace": "Заменить все правила"
+    "confirmReplace": "Заменить все правила",
+    "securityWarning": "Предупреждение безопасности",
+    "securityMessage": "Эти правила содержат исполняемый код (Хуки ответа). Импортируйте только из доверенных источников."
   },
   "warnings": {
     "overlappingRules": "Пересекается с {{count}} {{count, plural, one {правилом} few {правилами} other {правилами}}}",
