feat: implement compact view for rules and folders; add settings for view mode; enhance UI consistency and localization

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,6 +37,12 @@
     "importError": "Import failed",
     "method": "Method",
     "status": "Status",
+    "name": "Name",
+    "pattern": "Pattern",
+    "statusCode": "Status Code",
+    "actions": "Actions",
+    "viewDetailed": "Detailed view",
+    "viewCompact": "Compact view",
     "lastMatched": "Last matched",
     "resetHits": "Reset",
     "delay": "Delay",
