--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -37,6 +37,12 @@
     "importError": "Ошибка импорта",
     "method": "Метод",
     "status": "Статус",
+    "name": "Название",
+    "pattern": "Паттерн",
+    "statusCode": "Код статуса",
+    "actions": "Действия",
+    "viewDetailed": "Подробный вид",
+    "viewCompact": "Компактный вид",
     "lastMatched": "Последнее срабатывание",
     "resetHits": "Сбросить",
     "delay": "Задержка",
